Fix calendar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .container {
   width: 100vw;
+  height: 100vh;
 
   display: flex;
+  align-items: center;
 }
